fixed methods for title alignment and added more contact

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,15 +65,15 @@ header a {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 50px;
-    margin-left: 130px;
 }
 
 .section-title {
+    display: flex;
+    flex-wrap: wrap;
     color: rgb(35, 83, 105);
     font-size: 40px;
     text-align: right;
     padding-right: 20px;
-    width: 250px;
     border-right: solid 7px rgb(29, 40, 71);
 }
 
@@ -81,7 +81,8 @@ header a {
 /*About Me section*/
 .about {
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    margin-left: 130px;
 }
 
 .paragraph {
@@ -90,39 +91,35 @@ header a {
     color: rgb(22, 100, 94);
     font-size: 16px;
     margin-left: 20px;
-    width: 65%
+    width: 75%
 }
 
 
 /*My Works section*/
 .works {
-    display:flex;
-    margin-bottom: 30px;
-}
-
-.works .section-title{
-    width: 18%;
     display: flex;
+    margin-bottom: 50px;
+    margin-left: 122px;
 }
 
 .work {
     display: flex;
     flex-wrap: wrap;
-    width: 68%;
+    width: 75%;
 }
 
 .work h3 {
+    display: flex;
     color: lightgoldenrodyellow;
-    font-size: 22px;
+    font-size: 20px;
     padding: 10px;
     background-color: rgb(63, 129, 155);
 }
 
 .work img {
-    display: flex;
-    flex-wrap: wrap;
     float: right;
     width: 100%;
+    min-width: 50%;
     height: auto;
     margin: 0 0 10px 20px;
     border: solid 12px rgb(63, 129, 155);
@@ -135,28 +132,32 @@ header a {
 
 .other-works article{
     width: 50%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .primary {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .primary .caption {
-    top: 80%;
+    top: 70%;
     left: 3%;
+}
+
+.primary h3 {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 30px;
+    padding: 12px;
 }
 
 .primary img {
     width: 100%;
     height: auto;
 }
-
-/*.primary h3 {
-    font-size: 28px;
-    top: 80%;
-    left:
-}*/
 
 article {
     position: relative;
@@ -165,17 +166,19 @@ article {
 
 
 .caption {
+    display: flex;
+    flex-wrap: wrap;
     position: absolute;
     top: 60%;
-    left: 5%;
+    left: 6%;
 }
-
 
 
 /*Contact Me section*/
 .mycontacts {
     display: flex;
-    flex-wrap: wrap;
+    margin-left: 81px;
+    margin-bottom: 50px;
 }
 
 .contacts {
@@ -187,5 +190,5 @@ article {
 .contact {
     font-size: 26px;
     border-bottom: solid 6px rgb(63, 129, 155);
-    margin-left: 100px;
+    margin-left: 40px;
 }
